# travel-guru

backend/: .env  .gitignore  pyproject.toml
backend/api-gateway/: main.py
backend/api_gateway/: main.py
backend/api_gateway/routes/: auth_proxy.py
backend/auth_svc/: .env  Dockerfile  main.py  requirements.txt
backend/auth_svc/controllers/: auth_controller.py  password_reset.py
backend/auth_svc/database/: database.py
backend/auth_svc/models/: auth_model.py
backend/auth_svc/routes/: auth_routes.py
backend/auth_svc/schemas/: auth_schema.py
backend/database/: database.py
backend/inventory_svc/app/v1/: main.py
backend/inventory_svc/app/v1/controllers/: destination_controller.py  hotel_controller.py
backend/inventory_svc/app/v1/database/: db.py
backend/inventory_svc/app/v1/models/: base.py  inventory_model.py
backend/inventory_svc/app/v1/routes/: hotel_routes.py  inventory_routes.py
backend/inventory_svc/app/v1/schemas/: hotel_schema.py  inventory_schema.py
docs/: database tables.xlsx  database_schema.md  high_level_architecture.md
